src/server/run/snapshots/viguno__server__run__hpo_genes__test__hpo_genes_gene_symbol_suffix_no_hpo_terms.snap
---
source: src/server/run/hpo_genes.rs
expression: "&run_query(web_server_data.clone(),\n                \"/hpo/genes?gene_symbol=GDS&match=suffix\").await?"
---
version:
  hpo: 2024-07-01
  viguno: 0.0.0
query:
  gene_id: ~
  gene_symbol: GDS
  match_: suffix
  max_results: 100
  hpo_terms: false
result:
  - gene_ncbi_id: 23483
    gene_symbol: TGDS
    hgnc_id: "HGNC:20324"
