src/server/run/snapshots/viguno__server__run__hpo_genes__test__hpo_genes_ncbi_gene_id_exact_no_hpo_terms.snap
---
source: src/server/run/hpo_genes.rs
expression: "&run_query(web_server_data.clone(), \"/hpo/genes?gene_id=2348\").await?"
---
version:
  hpo: 2024-07-01
  viguno: 0.0.0
query:
  gene_id: "2348"
  gene_symbol: ~
  match_: ~
  max_results: 100
  hpo_terms: false
result:
  - gene_ncbi_id: 2348
    gene_symbol: FOLR1
    hgnc_id: "HGNC:3791"
